Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Watched Subcomponents
JDK
JDK-8262746
[lworld] jcmd VM.class_print_layout crash due to NULL cld name
Log In
Resolved
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P4
Fix Version/s:
None
Affects Version/s:
repo-valhalla
Component/s:
hotspot
Labels:
lw3
lworld
Subcomponent:
runtime
Description
jcmd VM.class_print_layout crashes when printing classes which loaded by bootstrap loader since these classes has NULL class_loder_data()->name().
Attachments
Issue Links
links to
Commit
openjdk/valhalla/6131196e
Review
openjdk/valhalla/354
Activity
People
Assignee:
Frederic Parain
Reporter:
Tobias Hartmann
Votes
:
0
Vote for this issue
Watchers:
1
Start watching this issue
Dates
Created:
2021-03-01 04:46
Updated:
2021-03-02 07:16
Resolved:
2021-03-02 07:16