8262746: [lworld] jcmd VM.class_print_layout crash due to NULL cld name

Reviewed-by: fparain